# excel-chat-app

./: .gitignore  Readme.md  app.py  excelapp.py  excelthing.py  pyproject.toml  requirements.txt
excel_chat_app/: config.py  logger_config.py
excel_chat_app/core/: chat_workflow.py  data_handler.py  llm_setup.py
excel_chat_app/ui/: main_content.py  sidebar.py
