[project]
name = "stewarttitlecompany"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.27",
    "langchain-together>=0.3.0",
    "langgraph>=0.5.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "streamlit-modal>=0.1.2",
    "tabulate>=0.9.0",
    "typing-extensions>=4.14.0",
]
